--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div id="app">
+      <h2>Figwheel template</h2>
+      <p>Checkout your developer console.</p>
+    </div>
+    <script src="js/musical.min.js" type="text/javascript"></script>
+    <script src="js/abcjs_basic_2.1-min.js" type="text/javascript"></script>
+    <script src="js/compiled/music_score.min.js" type="text/javascript"></script>
+
+  </body>
+</html>
