--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   </head>
   <body>
     <div id="app">
-      <h2>Figwheel template</h2>
-      <p>Checkout your developer console.</p>
     </div>
     <script src="js/musical.min.js" type="text/javascript"></script>
     <script src="js/abcjs_basic_2.1-min.js" type="text/javascript"></script>
-    <script src="js/compiled/music_score.min.js" type="text/javascript"></script>
+    <script src="js/compiled/music_score.js" type="text/javascript"></script>
 
   </body>
 </html>
